# seldon-models

./: .gitignore  LICENSE  Makefile  README.md  index.html  index.yaml  mock-model-0.2.0.tgz
.github/workflows/: helm-charts.yaml  mock-model.yaml  publish-helm-charts.yaml
helm-charts/mock-model/: Chart.yaml  values.yaml
helm-charts/mock-model/templates/: _helpers.tpl  seldondeployment.yaml
mock-model/: Dockerfile  Makefile  Model.py  generate-vegeta-json.py  manifest.yaml  vegeta-target.json
resources/: mock-model-0.1.0.tgz
v2-mlflow-elasticnet-wine/: Makefile  manifest.yaml  request-grpc.json  request-rest.json
v2-sklearn-income/: manifest.yaml  request-grpc.json
v2-sklearn-iris/: Makefile  manifest.yaml
v2-sklearn-mnist/: .gitignore  Makefile  manifest.yaml  model-settings.json  prepare-batch-input.py  pyproject.toml  request-grpc.json  request-rest.json  request.json  train.py  tritonclient aio.ipynb  tritonclient.ipynb
v2-triton-mnist/: .gitignore  Makefile  manifest.yaml  prepare-batch-input.py  pyproject.toml  request.json  requests.ipynb  train.py  tritonclient.ipynb
v2-triton-mnist/models-repository/mnist/: config.pbtxt
v2-xgboost-iris/: Makefile  manifest.yaml  request-rest.json
