[tool.poetry]
name = "v2-triton-mnist"
version = "0.1.0"
description = ""
authors = ["Rafal Skolasinski <r.j.skolasinski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
tensorflow = "^2.9.1"
orjson = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
requests = "^2.28.1"
matplotlib = "^3.5.3"
ipykernel = "^6.15.1"
tritonclient = {extras = ["all"], version = "^2.24.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
